@@ -43,6 +43,9 @@ if [is_amd64_regs_target] {
 } elseif { [istarget "s390*-*-*"] } {
     set fpreg "r11"
     set spreg "r15"
+} elseif [is_aarch32_target] {
+    set fpreg "sp"
+    set spreg "sp"
     set pcreg "pc"
 } else {
     set fpreg "fp"
