@@ -3,6 +3,7 @@
 
 *** Changes since GDB 7.11
 
+<<<<<<< fb3cfb6d0a414d0c545cde6aabd8877917208778
 * GDB now supports a negative repeat count in the 'x' command to examine
   memory backward from the given address.  For example:
 
@@ -16,6 +17,9 @@
        0x400576 <main(int, char**)+20>:     mov    $0x2a,%edi
        0x40057b <main(int, char**)+25>:
         callq  0x400536 <Func1(int, char const*)>
+=======
+* Support for tracepoints on arm-linux was added in GDBServer.
+>>>>>>> Support tracepoints for ARM linux in GDBServer
 
 * Fortran: Support structures with fields of dynamic types and 
   arrays of dynamic types.
